--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,6 @@ Description: glamor Xserver 2D acceleration modified to work with libhybris driv
 Package: glamor-hybris-dev
 Section: libdevel
 Architecture: armhf arm64 i386 amd64
-Depends: libandroid-properties1 (= ${binary:Version}),
-         ${misc:Depends}
+Depends: ${misc:Depends}
 Description: Development headers files for glamor-hybris
  Contains the development files.
